Commiting the running state of the MixApp